# harbor-smolvm

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/tasks/smoke/: instruction.md  task.toml
examples/tasks/smoke-cloud/: task.toml
examples/tasks/smoke-cloud/solution/: solve.sh
examples/tasks/smoke-cloud/tests/: test.sh
examples/tasks/wordcount/: instruction.md  task.toml
examples/tasks/wordcount/tests/: test.sh
src/harbor_smolvm/: __init__.py  environment.py
tests/: test_fork_orchestration.py
